Pre & Code strip
Plus various other small tweaks

--- a/partials/meta.hbs
+++ b/partials/meta.hbs
@@ -23,9 +23,9 @@
 <link rel="icon" type="image/png" href="/assets/img/icons/android/android-chrome-192x192.png?v=gAAmLMYXpw" sizes="192x192">
 <link rel="icon" type="image/png" href="/assets/img/icons/favicon/favicon-16x16.png?v=gAAmLMYXpw" sizes="16x16">
 <link rel="manifest" href="/assets/img/icons/android/manifest.json?v=gAAmLMYXpw">
-<link rel="mask-icon" href="/assets/img/icons/safari/safari-pinned-tab.svg?v=gAAmLMYXpw" color="#56817a">
+<link rel="mask-icon" href="/assets/img/icons/safari/safari-pinned-tab.svg?v=gAAmLMYXpw" color="#282C34">
 <link rel="shortcut icon" href="/assets/img/icons/favicon/favicon.ico?v=gAAmLMYXpw">
-<meta name="msapplication-TileColor" content="#56817a">
+<meta name="msapplication-TileColor" content="#282C34">
 <meta name="msapplication-TileImage" content="/assets/img/icons/microsoft/mstile-144x144.png?v=gAAmLMYXpw">
 <meta name="msapplication-config" content="/assets/img/icons/microsoft/browserconfig.xml?v=gAAmLMYXpw">
-<meta name="theme-color" content="#56817a">
+<meta name="theme-color" content="#282C34">
