--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -5,35 +5,43 @@ and then add your link to the <a>.
 --------------------------------}}
 <ul class="social expanded">
 
-    <!-- Facebook -->
-    <li class="social item hvr-grow-rotate">
-        <a rel="me" target="_blank" href="https://www.facebook.com/caffeinecoding" title="Caffeine Coding on Facebook">
-            <i class='fa fa-facebook-official'></i>
-            <span class="label">Facebook</span>
-        </a>
-    </li>
+  <!-- Linkedin -->
+  <li class="social item hvr-grow-rotate">
+      <a rel="me" target="_blank" href="http://linkedin.com/in/frankgervais/" title="Francois on LinkedIn">
+          <i class='fa fa-linkedin'></i>
+          <span class="label">Linkedin</span>
+      </a>
+  </li>
 
-    <!-- Twitter -->
+    <!-- AngelList -->
     <li class="social item hvr-grow-rotate">
-        <a rel="me" target="_blank" href="http://twitter.com/kelyvinN" title="@KelyvinN on Twitter">
-            <i class='fa fa-twitter'></i>
-            <span class="label">Twitter</span>
-        </a>
-    </li>
-
-    <!-- Linkedin -->
-    <li class="social item hvr-grow-rotate">
-        <a rel="me" target="_blank" href="http://linkedin.com/in/kelyvin" title="Kelyvin on LinkedIn">
-            <i class='fa fa-linkedin-square'></i>
-            <span class="label">Linkedin</span>
+        <a rel="me" target="_blank" href="https://angel.co/francois-gervais" title="Francois on AngelList">
+            <i class='fa fa-angellist'></i>
+            <span class="label">AngelList</span>
         </a>
     </li>
 
     <!-- Github -->
     <li class="social item hvr-grow-rotate">
-        <a rel="me" target="_blank" href="https://github.com/kelyvin" title="Kelyvin on Github">
+        <a rel="me" target="_blank" href="https://github.com/francoisgervais/website-v13" title="Francois on Github">
             <i class='fa fa-github'></i>
             <span class="label">Github</span>
+        </a>
+    </li>
+
+    <!-- Email -->
+    <li class="social item hvr-grow-rotate">
+        <a rel="me" target="_blank" href="mailto:client@francoisgervais.ca" title="Send me email">
+            <i class='fa fa-envelope-o'></i>
+            <span class="label">Email</span>
+        </a>
+    </li>
+
+    <!-- Phone -->
+    <li class="social item hvr-grow-rotate">
+        <a rel="me" target="_blank" href="tel:5148131337" title="Give me a call">
+            <i class='fa fa-mobile'></i>
+            <span class="label">Phone</span>
         </a>
     </li>
 
