--- a/amp.hbs
+++ b/amp.hbs
@@ -133,12 +133,7 @@
             box-sizing: content-box;
             height: 0;
         }
-        pre {
-            overflow: auto;
-        }
-        code,
         kbd,
-        pre,
         samp {
             font-family: monospace, monospace;
             font-size: 1em;
@@ -406,46 +401,6 @@
             background-color: #fdffb6;
         }
 
-        code,
-        tt {
-            padding: 1px 3px;
-            border: #e3edf3 1px solid;
-            background: #f7fafb;
-            border-radius: 2px;
-            white-space: pre-wrap;
-            font-family: Consolas, Inconsolata, monospace, sans-serif;
-            font-size: 0.85em;
-            font-feature-settings: "liga" 0;
-
-            -webkit-font-feature-settings: "liga" 0;
-            -moz-font-feature-settings: "liga" 0;
-        }
-
-        pre {
-            overflow: auto;
-            box-sizing: border-box;
-            margin: 0 0 1.75em 0;
-            padding: 10px;
-            width: 100%;
-            border: #e3edf3 1px solid;
-            background: #f7fafb;
-            border-radius: 3px;
-            white-space: pre;
-            font-family: Consolas, Inconsolata, monospace, sans-serif;
-            font-size: 0.9em;
-
-            -moz-box-sizing: border-box;
-        }
-
-        pre code,
-        pre tt {
-            padding: 0;
-            border: none;
-            background: transparent;
-            white-space: pre-wrap;
-            font-size: inherit;
-        }
-
         kbd {
             display: inline-block;
             margin-bottom: 0.4em;
@@ -608,7 +563,7 @@
             box-sizing: border-box;
             width: 100%;
             height: 50px;
-            background: #56817A no-repeat center center;
+            background: #282C34 no-repeat center center;
             background-size: cover;
             text-align: left;
 
@@ -830,7 +785,7 @@
     <footer class="site-footer clearfix">
         <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
         <section class="poweredby">
-            Proudly published with <a href="https://ghost.org">Ghost</a>  and <a href="https://github.com/kelyvin/caffeine-theme" target="_blank">Caffeine Theme</a>
+            Proudly published with <a href="https://ghost.org">Ghost</a>  and a modified version of <a href="https://github.com/kelyvin/caffeine-theme" target="_blank">Caffeine Theme</a>
         </section>
     </footer>
 </body>
