footer.hbs copyright fix
Was previously relaying article title, now relaying blog title.

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
     <span class="copyright">
-        &copy; {{date format="YYYY"}} {{meta_title}}. All Rights Reserved. | Built with <a href="https://ghost.org/" target="_blank">Ghost</a> and a modified version of <a href="https://github.com/kelyvin/caffeine-theme" target="_blank">Caffeine Theme</a>. Icons provided by <a href="https://thenounproject.com/xinhstudio/" target="_blank">Xinh Studio</a> and <a href="http://fontawesome.io/" target="_blank">Font Awesome</a>.
+        &copy; {{date format="YYYY"}} {{@blog.title}}. All Rights Reserved. | Built with <a href="https://ghost.org/" target="_blank">Ghost</a> and a modified version of <a href="https://github.com/kelyvin/caffeine-theme" target="_blank">Caffeine Theme</a>. Icons provided by <a href="https://thenounproject.com/xinhstudio/" target="_blank">Xinh Studio</a> and <a href="http://fontawesome.io/" target="_blank">Font Awesome</a>.
     </span>
 </footer>
